Chore: Finish Generate Payroll Module
